2008-06-05  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (GETHOSTID): implement
	* modules/syscalls/posix.lisp (gethostid): export

2008-06-05  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (ERRNO): when the argument is T,
	return all known error codes as an alist

2008-06-04  Sam Steingold  <sds@gnu.org>

	* calls.c (ERRNO, STRERROR) [WIN32_NATIVE]: use GetLastError(),
	SetLastError() and FormatMessage() instead of errno and strerror
	(check_errno) [WIN32_NATIVE]: define separately

2008-06-04  Sam Steingold  <sds@gnu.org>

	* inspect.lisp (get-insp): accept :w and :n
	(print-inspection, inspect-frontend): say when more slots are available
	(inspect): bind *INSPECT-LENGTH* so that :w & :n do not act across
	inspect invocations

2008-06-04  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (DISPLAY-GET-DEFAULT): add
	* modules/clx/new-clx/clx.lisp (display-get-default)
	(display-resource-manager-string, screen-resource-string): export

2008-06-04  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (NO-OPERATION): return no values on
	success and signal an error on failure

2008-06-03  Sam Steingold  <sds@gnu.org>

	* configure, makemake.in: pass --disable-option-checking to
	sub-configures

2008-06-03  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (strip-comments): new function
	(split-command): use it to support comments inside DEFCHECKERs

2008-06-03  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/posix.lisp (physical-memory, *services-file*):
	signal an error on non UNIX & Win32 platforms

2008-06-03  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (FILE-OWNER): use *PATHNAME-ENCODING*
	for the filename instead of *MISC-ENCODING*
	(get_owner) [!HAVE_GETPWUID && !WIN32_NATIVE]: use an exhaustive
	cpp conditioning to ensure that it is always defined

2008-06-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (module_configure_flags): do not add
	--with-dynamic-ffi & --with-dynamic-modules
