@@ -1184,7 +1184,7 @@ POSIX:SETPGRP
 setpgrp
 POSIX:GETSID
 getsid
-POSIX:GETPGID
+POSIX:PGID
 getpgid
 POSIX:SETREUID
 setreuid
@@ -1202,15 +1202,15 @@ POSIX:PUTUTXLINE
 pututxline
 POSIX:SETUTXENT
 setutxent
-POSIX:GETUID
+POSIX:UID
 getuid
-POSIX:GETGID
+POSIX:GID
 getgid
-POSIX:GETEUID
+POSIX:EUID
 geteuid
-POSIX:GETEGID
+POSIX:EGID
 getegid
-POSIX:GETGROUPS
+POSIX:GROUPS
 getgroups
 POSIX:STRING-TIME
 strtime
